Highlight bundled tab without real "highlighted" attribute #2297

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -269,7 +269,7 @@ ul {
   top: 0;
 }
 
-.tab:not(.highlighted) .highlighter,
+.tab:not(.highlighted):not(.bundled-active) .highlighter,
 .tab:not(.bursting) .burster {
   display: none;
 }
