Apply bundled-active style for other theme #2297

--- a/webextensions/sidebar/styles/square/highcontrast.css
+++ b/webextensions/sidebar/styles/square/highcontrast.css
@@ -112,6 +112,6 @@
 
 
 /* hide regular active tab marker */
-.highlighter::before {
+.tab:not(.bundled-active) .highlighter::before {
   display: none !important;
 }
