--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -30,7 +30,9 @@
   --tab-like-surface: #d4dde5;
   --tab-surface: transparent;
   --tab-surface-active-color: #94A1C0;
+  --tab-surface-active-color-pale: #B4C1E0;
   --tab-surface-active-gradient: linear-gradient(to bottom, #A0B0CF, #7386AB) repeat-x;
+  --tab-surface-active-gradient-pale: linear-gradient(to bottom, #C0D0EF, #93A6CB) repeat-x;
   --tab-surface-active-gradient-inactive: linear-gradient(to bottom, #B4B4B4, #8A8A8A) repeat-x;
   --tab-text: black;
   --tab-text-inverted: white;
@@ -102,6 +104,11 @@
 .tab.active {
   border-top: 1px solid var(--tab-surface-active-color);
   background: var(--tab-surface-active-gradient);
+}
+
+.tab.bundled-active {
+  border-top: 1px solid var(--tab-surface-active-color-pale);
+  background: var(--tab-surface-active-gradient-pale);
 }
 
 :-moz-window-inactive .tab.active {
