--- a/webextensions/sidebar/styles/metal/metal.css
+++ b/webextensions/sidebar/styles/metal/metal.css
@@ -34,6 +34,10 @@
   padding: 2px 5px 2px 10px;
 }
 
+.tab.faviconized.active {
+  background: var(--tab-surface-active);
+}
+
 :root.left .tab:not(.faviconized).active,
 :root.left .after-tabs button:hover {
   border-image: url("tab-active-l.png") 10 5 10 10 fill / 10px 5px 10px 10px;
