--- a/webextensions/sidebar/styles/metal/metal.css
+++ b/webextensions/sidebar/styles/metal/metal.css
@@ -13,6 +13,7 @@
   --tab-like-surface: #9d9d9d;
   --tab-surface: var(--tab-like-surface);
   --tab-surface-active: #b3b2b3;
+  --tab-surface-active-pale: #939293;
   --tab-text: black;
   --tab-text-inverted: white;
 
@@ -34,13 +35,13 @@
   padding: 2px 5px 2px 10px;
 }
 
-.tab.faviconized.active {
-  background: var(--tab-surface-active);
-}
-
 :root.left .tab:not(.faviconized).active,
 :root.left .after-tabs button:hover {
   border-image: url("tab-active-l.png") 10 5 10 10 fill / 10px 5px 10px 10px;
+}
+
+:root.left .tab:not(.faviconized).bundled-active {
+  border-image: url("tab-half-active-l.png") 10 5 10 10 fill / 10px 5px 10px 10px;
 }
 
 :root.right .tab:not(.faviconized),
@@ -52,6 +53,10 @@
 :root.right .tab:not(.faviconized).active,
 :root.right .after-tabs button:hover {
   border-image: url("tab-active-r.png") 10 10 10 5 fill / 10px 10px 10px 5px;
+}
+
+:root.right .tab:not(.faviconized).bundled-active {
+  border-image: url("tab-half-active-r.png") 10 10 10 5 fill / 10px 10px 10px 5px;
 }
 
 /* macOS workaround */
@@ -98,6 +103,14 @@
 .tab.faviconized.unread .favicon::before,
 .tab.attention .favicon::before {
   left: calc(var(--attention-marker-x-offset) + 3px);
+}
+
+.tab.faviconized.active {
+  background: var(--tab-surface-active);
+}
+
+.tab.faviconized.bundled-active {
+  background: var(--tab-surface-active-pale);
 }
 
 
