--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -70,6 +70,17 @@
   outline: 1px dotted rgba(255, 0, 0, 0.5);
 }
 
+/* Show internal tab id in the debug mode */
+:root.debug .tab::after {
+  content: attr(data-tab-id);
+  opacity: 0.65;
+}
+:root.debug .tab.faviconized::after {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
 /* This is required to prevent dragging of images (ex. favicon).
    Otherwise they are unexpectedly dragged just as an image and
    it is downloadable via dropping on the desktop or others. */
