More highlight bundled active tab

--- a/webextensions/sidebar/styles/square/highcontrast.css
+++ b/webextensions/sidebar/styles/square/highcontrast.css
@@ -115,3 +115,7 @@
 .tab:not(.bundled-active) .highlighter::before {
   display: none !important;
 }
+
+.tab.bundled-active:not(.highlighted) .highlighter::before {
+  opacity: 1;
+}
