--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -77,6 +77,7 @@
 }
 
 .tab.active,
+.tab.bundled-active,
 .tab:hover {
   background: var(--tab-surface);
 }
@@ -85,25 +86,32 @@
   color: var(--tab-text);
 }
 
-.tab:not(.active):hover,
+.tab:not(.active):not(.bundled-active):hover,
 .after-tabs button:hover {
   --tab-surface: var(--tab-surface-hover);
 }
 
-.tab.active {
-  --tab-surface: var(--tab-surface-active);
+.tab.active,
+.tab.bundled-active {
   --throbber-color: var(--browser-loading-indicator, var(--tab-highlighted-glow));
   --tab-text: var(--tab-active-text);
   --tab-text-inverted: var(--tab-active-text-inverted);
 }
-.tab.active:hover {
+.tab.active {
+  --tab-surface: var(--tab-surface-active);
+}
+.tab.active:hover,
+.tab.bundled-active {
   --tab-surface: var(--tab-surface-active-hover);
 }
+.tab.bundled-active:hover {
+  --tab-surface: var(--tab-surface-hover);
+}
 
-.tab:not(.active) {
+.tab:not(.active):not(.bundled-active):not(.bundled-active) {
   --throbber-color: var(--browser-loading-indicator, ThreeDDarkShadow);
 }
 
-.tab:not(.active) .burster {
+.tab:not(.active):not(.bundled-active):not(.bundled-active) .burster {
   --throbber-color: var(--browser-loading-indicator, #B5C5E0);
 }
