Double click to toggle visibility of the subpanel

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -627,21 +627,17 @@ ul {
 
 #subpanel-container {
   top: auto;
-  --resizer-size: 3px;
 }
 
 iframe#subpanel {
   border: none;
-  bottom: 0;
   height: auto;
-  left: 0;
+  margin: 0;
   max-height: none;
   max-width: 100%;
   min-height: 0;
   min-width: 0;
-  position: absolute;
-  right: 0;
-  top: var(--resizer-size);
+  padding: 0;
   width: 100%;
 }
 
@@ -649,11 +645,9 @@ iframe#subpanel {
   background: var(--tab-surface);
   border-top: 1px solid var(--tab-border);
   cursor: ns-resize;
-  height: calc(var(--resizer-size) - 1px);
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
+  height: calc(var(--subpanel-resizer-size) - 1px);
+  margin: 0;
+  padding: 0;
 }
 
 
