--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -681,6 +681,16 @@ iframe#subpanel {
   content: "▲";
 }
 
+#subpanel-screen {
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1000;
+}
+
 
 
 /* fake context menu */
