--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -661,7 +661,7 @@ iframe#subpanel {
 #subpanel-header-main {
   flex-grow: 1;
   overflow: hidden;
-  text-overflow: ellipsis:
+  text-overflow: ellipsis;
 }
 
 #subpanel-selector-anchor,
