Use AppWorkspace for the background area on "Plain" and "Mixed" theme

--- a/webextensions/sidebar/styles/square/plain-color.css
+++ b/webextensions/sidebar/styles/square/plain-color.css
@@ -46,7 +46,7 @@
   --tabbar-bg: var(--browser-bg-darker, ThreeDShadow);
 }
 :root[color-scheme="system-color"] #background::after {
-  background: var(--browser-bg-darker, ThreeDDarkShadow);
+  background: var(--browser-bg-darker, AppWorkspace);
   opacity: 0.15;
 
   bottom: 0;
