--- a/webextensions/sidebar/styles/metal/metal.css
+++ b/webextensions/sidebar/styles/metal/metal.css
@@ -84,7 +84,7 @@
   margin-left: 0.25em;
 }
 
-.closebox {
+tst-tab-closebox {
   background: none transparent;
   border: 0 none;
   padding: 5px 3px 7px;
