--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -145,7 +145,7 @@ tab-closebox:active {
 
 /* Tab label is without special decoration except when selected: then
    the text is white and bold. */
-.tab .label {
+.tab tab-label {
   font-weight: normal;
   line-height: 1.4;
   color: var(--tab-text);
@@ -156,7 +156,7 @@ tab-closebox:active {
   padding: 0 0 0.25em 0;
 }
 
-.tab.active .label {
+.tab.active tab-label {
   font-weight: bold;
   color: var(--tab-text-active);
   text-shadow: 0 1px var(--shadow-color);
