--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -162,7 +162,7 @@ tab-closebox:active {
   text-shadow: 0 1px var(--shadow-color);
 }
 
-.tab.active .twisty {
+.tab.active tab-twisty {
   color: white;
 }
 
