--- a/webextensions/sidebar/styles/favicon.css
+++ b/webextensions/sidebar/styles/favicon.css
@@ -19,11 +19,11 @@ tab-favicon {
   white-space: pre;
   width: var(--favicon-size);
 }
-.tab tab-favicon,
-.tab tab-favicon * {
+tab-item tab-favicon,
+tab-item tab-favicon * {
   vertical-align: baseline;
 }
-.tab tab-favicon * {
+tab-item tab-favicon * {
   position: relative;
   z-index: 20;
 }
@@ -46,68 +46,68 @@ tab-favicon {
   max-width: var(--favicon-size);
   width: var(--svg-small-icon-size);
 }
-:root.simulate-svg-context-fill .tab .favicon-builtin::before {
+:root.simulate-svg-context-fill tab-item .favicon-builtin::before {
   background: var(--tab-text);
   mask: url("/resources/icons/globe-16.svg") no-repeat center / 100%;
 }
 
-.tab.group-tab .favicon-builtin::before {
+tab-item.group-tab .favicon-builtin::before {
   background: url("/resources/icons/folder-16.svg") no-repeat center / 100%;
 }
-:root.simulate-svg-context-fill .tab.group-tab .favicon-builtin::before {
+:root.simulate-svg-context-fill tab-item.group-tab .favicon-builtin::before {
   background: var(--tab-text);
   mask: url("/resources/icons/folder-16.svg") no-repeat center / 100%;
 }
 
 
-.tab[data-current-uri^="chrome:"] .favicon-builtin::before {
+tab-item[data-current-uri^="chrome:"] .favicon-builtin::before {
   background: url("/resources/icons/globe-16.svg") no-repeat center / 100%;
 }
-:root.simulate-svg-context-fill .tab[data-current-uri^="chrome:"] .favicon-builtin::before {
+:root.simulate-svg-context-fill tab-item[data-current-uri^="chrome:"] .favicon-builtin::before {
   background: var(--tab-text);
   mask: url("/resources/icons/globe-16.svg") no-repeat center / 100%;
 }
 
-.tab[data-current-uri^="about:addons"] .favicon-builtin::before {
+tab-item[data-current-uri^="about:addons"] .favicon-builtin::before {
   background: url("/resources/icons/extensionGeneric-16.svg") no-repeat center / 100%;
 }
-:root.simulate-svg-context-fill .tab[data-current-uri^="about:addons"] .favicon-builtin::before {
+:root.simulate-svg-context-fill tab-item[data-current-uri^="about:addons"] .favicon-builtin::before {
   background: var(--tab-text);
   mask: url("/resources/icons/extensionGeneric-16.svg") no-repeat center / 100%;
 }
 
-.tab[data-current-uri^="about:preferences"] .favicon-builtin::before {
+tab-item[data-current-uri^="about:preferences"] .favicon-builtin::before {
   background: url("/resources/icons/settings.svg") no-repeat center / 100%;
 }
-:root.simulate-svg-context-fill .tab[data-current-uri^="about:preferences"] .favicon-builtin::before {
+:root.simulate-svg-context-fill tab-item[data-current-uri^="about:preferences"] .favicon-builtin::before {
   background: var(--tab-text);
   mask: url("/resources/icons/settings.svg") no-repeat center / 100%;
 }
 
-.tab[data-current-uri^="about:performance"] .favicon-builtin::before {
+tab-item[data-current-uri^="about:performance"] .favicon-builtin::before {
   background: url("/resources/icons/performance.svg") no-repeat center / 100%;
 }
-:root.simulate-svg-context-fill .tab[data-current-uri^="about:performance"] .favicon-builtin::before {
+:root.simulate-svg-context-fill tab-item[data-current-uri^="about:performance"] .favicon-builtin::before {
   background: var(--tab-text);
   mask: url("/resources/icons/performance.svg") no-repeat center / 100%;
 }
 
-.tab[data-current-uri^="about:debugging"] .favicon-builtin::before {
+tab-item[data-current-uri^="about:debugging"] .favicon-builtin::before {
   background: url("/resources/icons/developer.svg") no-repeat center / 100%;
 }
-:root.simulate-svg-context-fill .tab[data-current-uri^="about:debugging"] .favicon-builtin::before {
+:root.simulate-svg-context-fill tab-item[data-current-uri^="about:debugging"] .favicon-builtin::before {
   background: var(--tab-text);
   mask: url("/resources/icons/developer.svg") no-repeat center / 100%;
 }
 
-.tab[data-current-uri^="about:privatebrowsing"] .favicon-builtin::before,
-:root.simulate-svg-context-fill .tab[data-current-uri^="about:privatebrowsing"] .favicon-builtin::before {
+tab-item[data-current-uri^="about:privatebrowsing"] .favicon-builtin::before,
+:root.simulate-svg-context-fill tab-item[data-current-uri^="about:privatebrowsing"] .favicon-builtin::before {
   background: url("/resources/icons/privatebrowsing-favicon.svg") no-repeat center / 100%;
   mask: none;
 }
 
 
-.tab.group-tab tab-favicon:not(.error) .favicon-image[src] {
+tab-item.group-tab tab-favicon:not(.error) .favicon-image[src] {
   bottom: 0;
   max-height: 10px;
   max-width: 10px;
@@ -119,13 +119,13 @@ tab-favicon {
 
 tab-favicon.error .favicon-image,
 .favicon-image:not([src]),
-.tab[data-current-uri^="chrome:"] .favicon-image,
-.tab[data-current-uri^="about:addons"] .favicon-image,
-.tab[data-current-uri^="about:debugging"] .favicon-image,
-.tab[data-current-uri^="about:preferences"] .favicon-image,
-.tab:not(.group-tab):not([data-current-uri^="chrome:"]):not([data-current-uri^="about:addons"]):not([data-current-uri^="about:debugging"]):not([data-current-uri^="about:preferences"])
+tab-item[data-current-uri^="chrome:"] .favicon-image,
+tab-item[data-current-uri^="about:addons"] .favicon-image,
+tab-item[data-current-uri^="about:debugging"] .favicon-image,
+tab-item[data-current-uri^="about:preferences"] .favicon-image,
+tab-item:not(.group-tab):not([data-current-uri^="chrome:"]):not([data-current-uri^="about:addons"]):not([data-current-uri^="about:debugging"]):not([data-current-uri^="about:preferences"])
   tab-favicon:not(.error) .favicon-image[src] ~ .favicon-builtin::before,
-.tab.loading .favicon-image,
-.tab.loading .favicon-builtin::before {
+tab-item.loading .favicon-image,
+tab-item.loading .favicon-builtin::before {
   display: none !important;
 }
